Remove the annotation processor